# kiwi

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  README.rst
data/basis/: 7s7p7d.g94  aug-mcc-pv8z_sonly.g94  cc-pvdz-mc.g94  cc-pvqz-mc.g94  cc-pvtz-mc.g94  pb3-p-test.g94  pb3-s-test.g94  pb4-d-cartesian.g94  pb4-d.g94  pb4-f1-cartesian.g94  pb4-f1.g94  pb5-d.g94  pb5-g-cartesian.g94  pb5-g.g94
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  readme.rst  tasks.rst  usage.rst
src/: CMakeLists.txt
src/Kiwi/: CMakeLists.txt  config.cmake.in
src/Kiwi/App/: Ao2MoTask.cpp  Ao2MoTask.h  CMakeLists.txt  CalculationManager.cpp  CalculationManager.h  Keywords.h  NaturalOrbitalsTask.cpp  NaturalOrbitalsTask.h  ParticleDensityTask.cpp  ParticleDensityTask.h  ReferenceCalculationTask.cpp  ReferenceCalculationTask.h  Task.h  TaskFactory.h  main.cpp
src/Kiwi/Kiwi/HartreeFock/: AlternatingScf.h  BFGSScf.h  ConvergenceAccelerator.cpp  ConvergenceAccelerator.h  Files.cmake  FockMatrixBuilder.cpp  FockMatrixBuilder.h  HartreeFockMain.cpp  HartreeFockMain.h  HartreeFockSettings.h  HartreeFockUtils.h  Scf.h  SecondOrder.h  SerialScf.h  StabilityAnalysis.h
src/Kiwi/Kiwi/HartreeFock/BFGS/: Builder.h  Interface.h  Optimizer.h
src/Kiwi/Kiwi/HartreeFock/FockMatrix/: BoHelper.h  CoulombExchangeMatrices.h  PreBoHelper.h  TwoTypeCoulomb.h
src/Kiwi/Kiwi/HartreeFock/InitialGuess/: InitialGuess.cpp  InitialGuess.h  Read.cpp  Read.h  SAD.cpp  SAD.h  SND.cpp  SND.h
src/Kiwi/Kiwi/HartreeFock/Projector/: IdentityProjector.cpp  IdentityProjector.h  Projector.cpp  Projector.h  ProjectorTraits.h
src/Kiwi/Kiwi/HartreeFock/SecondOrder/: ArhBuilder.cpp  ArhBuilder.h  ArhDavidson.h  ArhInterface.h  Driver.h  ModifiedDavidson.h  ModifiedDavidsonNewtonRhapson.h  SigmaVectorEvaluator.h
src/Kiwi/Kiwi/HartreeFock/SimultaneousDiis/: SimultaneousDiis.cpp  SimultaneousDiis.h
src/Kiwi/Kiwi/HartreeFock/SymmetryProjection/: SymmetryTypes.h
src/Kiwi/Kiwi/KiwiOpt/: Bisection.h  Davidson.h  DirectConjugateGradient.h  Files.cmake  GDIIS.h  LineSearchInterface.h  MoreThuente.h  ObjectiveFunction.h  Optimization.h  Optimizer.h  PreconditionedDirectConjugateGradient.h
src/Kiwi/Kiwi/KiwiUtils/: AO2MO.h  AO2MOHelper.h  BoFciDumper.cpp  BoFciDumper.h  Data.cpp  Data.h  Files.cmake  GeneralUtility.h  Loewdin.h  MolecularOrbitalsIO.cpp  MolecularOrbitalsIO.h  Molecule.cpp  Molecule.h  NaturalOrbitals.cpp  NaturalOrbitals.h  SymmetryEnums.h
src/Kiwi/Kiwi/KiwiUtils/ParticleDensity/: Engine.h  Evaluator.cpp  Evaluator.h
src/Kiwi/Tests/: BFGSHartreeFockTests.cpp  BoAugmentedRoothaanHallTests.cpp  BoDirectHartreeFockTests.cpp  BoRoothaanHallTests.cpp  CMakeLists.txt  IOTests.cpp  IntegralsTests.cpp  KiwiOptTests.cpp  KiwiUtilsTests.cpp  PreBoAugmentedRoothaanHallTests.cpp  PreBoDirectHartreeFockTests.cpp  PreBoRoothaanHallTests.cpp  SadTests.cpp
